# Silvus

./: Cargo.toml  README.md  blueprint.excalidraw
assets/: script.js  style.css
src/: config.rs  dirs.rs  main.rs  utils.rs
src/card/: cards.rs  episode.rs  mod.rs  movie.rs  other.rs  show.rs
src/cli/: get.rs  init.rs  mod.rs  run.rs
webtest/: imdb-img.html  imdb.html  website.html
